fix overflow title

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -1240,6 +1240,9 @@ Begin userProfile CSS
   color: #000;
   text-decoration: none;
   font-size: 14px;
+  -ms-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 #user-profile .tab-content .change-profile-btn {
